--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,9 +1,8 @@
 name: RUN-SCRAPER
 on:
-  workflow_run:
-    workflows: [ "CI" ]
-    types: [ "completed" ]
+  push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   deploy:
