--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: [ self-hosted, windows ]
     defaults:
       run:
-        working-directory: scraper-microservice
+        working-directory: scraper-service
 
     steps:
       - uses: actions/checkout@v4
