--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: [ self-hosted, windows ]
+    runs-on: [ self-hosted, Windows ]
     defaults:
       run:
         working-directory: scraper-service
