--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -20,4 +20,4 @@ jobs:
       
       - name: Run bootnow detached
         shell: cmd
-        run: start "" cmd /c "bootnow.bat"
+        run: start "" cmd /k "bootnow.bat"
