--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -18,6 +18,6 @@ jobs:
         run: copy "C:\actions-runner\application.properties" "src\main\resources\"
         shell: cmd
       
-      - name: Run scraper in background (nohup-like)
+      - name: Run bootnow fully detached
         shell: cmd
-        run: start /B cmd /c bootnow.bat
+        run: cmd /c start "" cmd /c "bootnow.bat"
