--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -18,6 +18,6 @@ jobs:
         run: copy "C:\actions-runner\application.properties" "src\main\resources\"
         shell: cmd
       
-      - name: Run bootnow fully detached
+      - name: Run bootnow detached
         shell: cmd
-        run: cmd /c start "" cmd /c "bootnow.bat"
+        run: powershell -NoLogo -NoProfile -Command "Start-Process cmd.exe -ArgumentList '/c start bootnow.bat' -WindowStyle Normal"
