--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -18,10 +18,6 @@ jobs:
         run: copy "C:\actions-runner\application.properties" "src\main\resources\"
         shell: cmd
       
-      - name: Run bootnow via schtasks detached
+      - name: Run bootnow
         shell: cmd
-        run: |
-          schtasks /create /tn Scraper /tr "\"%CD%\bootnow.bat\"" /sc once /st 00:00 /rl limited
-          schtasks /run /tn Scraper
-          timeout /t 5
-          schtasks /delete /tn Scraper /f
+        run: call boootnohup.bat
