--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Run killnow
         shell: cmd
         run: call killnow.bat
+        continue-on-error: true
         
       - uses: actions/checkout@v4
 
