--- a/.github/workflows/run-master.yml
+++ b/.github/workflows/run-master.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Run killnow
         shell: bash
-        run: man.sh stop
+        run: pwd
         continue-on-error: true
         
       - uses: actions/checkout@v4
