--- a/scraper-service/build.gradle
+++ b/scraper-service/build.gradle
@@ -1,7 +1,7 @@
 	plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.1'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.springframework.boot' version '4.0.0-M3'
+	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.hidetake.ssh' version '2.11.2' // SSH Plugin
 }
 
@@ -24,7 +24,7 @@ configurations {
 
 repositories {
 	mavenCentral()
-	jcenter()
+	// jcenter()
 }
 
 dependencies {
