--- a/master-service/build.gradle
+++ b/master-service/build.gradle
@@ -29,9 +29,11 @@ repositories {
 
 dependencies {
 	implementation 'me.catzy.invester:invester.kafka.messages'
+	
+	implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0")
 
-	compileOnly 'org.projectlombok:lombok:1.18.36'
-	annotationProcessor 'org.projectlombok:lombok:1.18.36'
+	compileOnly 'org.projectlombok:lombok:1.18.42'
+	annotationProcessor 'org.projectlombok:lombok:1.18.42'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
