--- a/scraper-service/build.gradle
+++ b/scraper-service/build.gradle
@@ -1,6 +1,6 @@
 	plugins {
 	id 'java'
-	id 'org.springframework.boot' version '4.0.0-M3'
+	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.hidetake.ssh' version '2.11.2' // SSH Plugin
 }
