--- a/scraper-service/build.gradle
+++ b/scraper-service/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 	//implementation 'com.rometools:rome:1.18.0'
 	//implementation 'com.unfbx:chatgpt-java:1.1.5'
 	
-	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+	//implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 	
 	// Selenium Java bindings
     implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
