--- a/.github/workflows/service-ops.yml
+++ b/.github/workflows/service-ops.yml
@@ -1,7 +1,7 @@
 name: service-ops
 run-name: >-
   service-ops  -  ${{ 
-    (github.event_name == 'workflow_dispatch' && format('{0} • {1}', inputs.action, inputs.service)) || 
+    (github.event_name == 'workflow_dispatch' && format('{0}  -  {1}', inputs.action, inputs.service)) || 
     (github.event_name == 'push' && contains(github.event.head_commit.message, '#deploy') && 'restart  -  auto (push)') ||
     (github.event_name == 'pull_request' && contains(github.event.head_commit.message, '#deploy') && 'restart  -  auto (PR)') ||
     'no operation'
